--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 # ===============================
 # Set here configurations for the database connection
 spring.datasource.url=jdbc:mysql://database-1.c5sqmoige2ob.ap-south-1.rds.amazonaws.com:3306/springboot_mysql_example?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/springboot_mysql_example?useSSL=false&serverTimezone=UTC
 #server.port=8080
 
 
